Fixing z-index so it is selectable.

--- a/acm-standard-applications/acm-law-enforcement/src/main/webapp/resources/assets/css/application.css
+++ b/acm-standard-applications/acm-law-enforcement/src/main/webapp/resources/assets/css/application.css
@@ -1847,4 +1847,5 @@ a.primary {
 	position: absolute;
 	left: 592px;
 	margin-top: 35px;
+	z-index: 1001;
 }
